# TtEL-Notepad

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: cmake-ubuntu.yml  gh-doxygen.yml  gh-pages-doxygen.yml  ghpages-doxygen.yml
SDL_image-main/: CHANGES.txt  CMakeLists.txt  README.txt
SDL_image-main/VisualC/: SDL_image.sln  SDL_image.vcxproj  SDL_image.vcxproj.filters
SDL_image-main/VisualC-WinRT/: SDL_image-UWP.vcxproj  SDL_image-UWP.vcxproj.filters
TtEL-NotepadSDL3/: CMakeLists.txt  TtEL-SDL3_Notepad-KeyHandler.h  TtEL-SDL3_Notepad-LOGIC.h  TtEL-SDL3_Notepad-MATH.h  TtEL-SDL3_Notepad.cpp  TtEL-SDL3_Notepad.hpp  TtEL-SDL3_Notepad.rc  TtEL-SDL3_Notepad.rct  credits.txt  globals.h  resource.h  test file.txt
TtEL-NotepadSDL3/DRAWING/: NotepadTexture.h  SDL_Surface-Tools.h  TextRenderer.h  TtEL-SDL3_Notepad-DRAW.h  VectorTypes.h
TtEL-NotepadSDL3/FILESYS/: TtEL-SDL3_Notepad-FILELOADING.h  UTF8_Checking.h
TtEL-NotepadSDL3/FILESYS/misc/: ByteMath.h
TtEL-NotepadSDL3/assets/cur/: arrow.cur  i_beam.cur
api/: CTestTestfile.cmake  Makefile  cmake_install.cmake  doxyfile
api/docbook/: dir_26d16d81272471d2448456b60bc14a13.xml  dir_26d16d81272471d2448456b60bc14a13_dep.md5  dir_b6dec414da85c21aec5e75dc0e099b8e_dep.md5  dir_cc0a3159c3b0c217005c671751f49963_dep.md5  dynlink_8h.xml  dynlink__impl_8h.xml  dynlink__impl_8h__incl.md5  dynlink__impl__beos_8h.xml  dynlink__impl__macos_8h.xml  dynlink__impl__symbol__beos_8h.xml  dynlink__impl__symbol__macos_8h.xml  dynlink__impl__symbol__unix_8h.xml  dynlink__impl__unix_8h.xml  dynlink__impl__win32_8h.xml  dynlink__interface_8h.xml  dynlink__interface_8h__incl.md5  dynlink__type_8h.xml  index.xml  loader_8h__incl.md5  loader__impl_8h__incl.md5  plugin_8h__incl.md5  plugin__impl_8h__incl.md5  plugin__loader_8h__incl.md5  preprocessor__arguments_8h__dep__incl.md5  preprocessor__boolean_8h__dep__incl.md5  preprocessor__comma_8h__dep__incl.md5  preprocessor__complement_8h__dep__incl.md5  preprocessor__empty_8h__dep__incl.md5  preprocessor__for_8h__dep__incl.md5  preprocessor__stringify_8h__dep__incl.md5  preprocessor__tuple_8h__dep__incl.md5  structaccessor__type.xml  structattribute__interface__type.xml  structbucket__type.xml  structclass__interface__type.xml  structdetour__interface__type.xml  structdynlink__impl__interface__type.xml  structdynlink__symbol__addr__beos__type.xml  structdynlink__symbol__addr__macos__type.xml  structdynlink__symbol__addr__unix__type.xml  (+47 more)
api/html/: adt_8h.html  adt_8h_source.html  adt__bucket_8h.html  adt__bucket_8h_source.html  adt__comparable_8h.html  adt__comparable_8h_source.html  adt__hash_8h.html  adt__hash_8h_source.html  adt__map_8h.html  adt__map_8h_source.html  adt__set_8h.html  adt__set_8h_source.html  adt__string_8h.html  adt__string_8h_source.html  adt__trie_8h.html  adt__trie_8h_source.html  adt__vector_8h.html  adt__vector_8h_source.html  annotated.html  classes.html  detour_8h.html  detour_8h__incl.map  detour_8h__incl.md5  (+571 more)
(+677 files in other folders)
